@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Tests]
+  - Added tests with Moose.
 
 v0.4.2    2020-01-04 12:59:01+00:00 Europe/London
   [Tests]
